[gd_scene load_steps=4 format=3 uid="uid://c2rriajb3r57p"]

[ext_resource type="FontFile" uid="uid://bsgngl7m1e6g7" path="res://assets/fonts/PixelOperator8.ttf" id="1_3yxkm"]
[ext_resource type="Script" path="res://Scenes and scripts/Menus/sound_options.gd" id="1_571ti"]

[sub_resource type="LabelSettings" id="LabelSettings_7rala"]
font = ExtResource("1_3yxkm")

[node name="SoundOptions" type="HBoxContainer"]
offset_right = 1130.0
offset_bottom = 142.0
size_flags_horizontal = 3
script = ExtResource("1_571ti")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 240

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_constants/separation = 16

[node name="MasterLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Master: 100%"
label_settings = SubResource("LabelSettings_7rala")

[node name="MasterSlider" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
max_value = 1.0
step = 0.005
value = 1.0
tick_count = 10
ticks_on_borders = true

[node name="SfxLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Sfx: 100%"
label_settings = SubResource("LabelSettings_7rala")

[node name="SfxSlider" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
max_value = 1.0
step = 0.005
value = 1.0
tick_count = 10
ticks_on_borders = true

[node name="MusicLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Music: 100%"
label_settings = SubResource("LabelSettings_7rala")

[node name="MusicSlider" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
max_value = 1.0
step = 0.005
value = 1.0
tick_count = 10
ticks_on_borders = true

[connection signal="value_changed" from="MarginContainer/VBoxContainer/MasterSlider" to="." method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/SfxSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
